Remove the usages of List.of and Map.of (#264)